# golem-llm

./: .gitignore  Cargo.toml  FINAL_PROGRESS_SUMMARY.md  PRD_REVIEW_AND_TASK_STATUS.md  PRD_Review_and_Task_Status.md  PROGRESS_SUMMARY.md  TASK_1_COMPLETION_SUMMARY.md  TEST_RESULTS.md
.cursor/rules/search/: algolia.mdc
.taskmaster/: state.json
.taskmaster/docs/: algolia-search-prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: README.md
docs/api/: core-interface.md
docs/guides/: getting-started.md
examples/: README.md
examples/ecommerce-search/: README.md
llm/search/: Cargo.toml
llm/search-algolia/: Cargo.toml  standalone_test.rs  standalone_test_Cargo.toml
llm/search-algolia/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm/search-algolia/wit/: algolia.wit
llm/search-elastic/: Cargo.toml
llm/search-elastic/src/: client.rs  conversions.rs  degradation.rs  durability_integration.rs  lib.rs
llm/search-elastic/wit/: elastic.wit
llm/search-meilisearch/: Cargo.toml
llm/search-meilisearch/src/: lib.rs
llm/search-meilisearch/wit/: meilisearch.wit
llm/search-opensearch/: Cargo.toml
llm/search-opensearch/src/: lib.rs
llm/search-opensearch/wit/: opensearch.wit
llm/search-typesense/: Cargo.toml
llm/search-typesense/src/: lib.rs
llm/search-typesense/wit/: typesense.wit
llm/search/src/: capabilities.rs  config.rs  durability.rs  error.rs  fallbacks.rs  lib.rs  testing.rs  types.rs  utils.rs
llm/search/src/durability/: golem_integration.rs
llm/search/wit/: golem-search.wit
scripts/: prd.txt
test/components-rust/test-search/: Cargo.toml  golem.yaml
test/components-rust/test-search/src/: lib.rs
test/components-rust/test-search/wit/: world.wit
