[package]
name = "golem-search-algolia"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Algolia Search APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability"]

[dependencies]
golem-rust = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[package.metadata.component]
package = "golem:search-algolia"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:search/search@1.0.0" = "golem_search::golem::search::search"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:search" = { path = "wit/deps/golem-search" }
"wasi:io" = { path = "wit/deps/wasi:io" }